--- a/TiendaGenerica/pom.xml
+++ b/TiendaGenerica/pom.xml
@@ -24,8 +24,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
+			<version>2.1.2</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
